--- a/software/_posts/2014-03-18-kipas.md
+++ b/software/_posts/2014-03-18-kipas.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Kipas"
 date:   2014-03-18 10:58:18 +0100
-categories: mobile
+tags: mobile
 ---
 ![Kipas](/assets/kipas.png)
 
