--- a/software/_posts/2015-06-18-oscream.md
+++ b/software/_posts/2015-06-18-oscream.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "OSCream"
 date:   2015-06-18 10:58:18 +0100
-categories: mobile
+tags: mobile
 ---
 ![OSCream](/assets/oscream.png)
 
