--- a/software/_posts/2016-06-18-runicity.md
+++ b/software/_posts/2016-06-18-runicity.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Runicity"
 date:   2016-06-18 10:58:18 +0100
-categories: mobile
+tags: mobile
 ---
 ![Runicity running](/assets/runicity-1.png)
 
