--- a/software/_posts/2017-06-18-yakolo.md
+++ b/software/_posts/2017-06-18-yakolo.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Yakolo"
 date:   2017-06-18 10:58:18 +0100
-categories: mobile
+tags: mobile
 ---
 ![Yakolo](/assets/yakolo.png)
 
