restored some content from previous blog

--- a/software/_posts/2014-03-18-kipas.md
+++ b/software/_posts/2014-03-18-kipas.md
@@ -6,4 +6,4 @@ tags: mobile
 ---
 ![Kipas](/assets/kipas.png)
 
-Kipas en un gestionnaire de mot de passe sécurisé qui permet de lire les bases de données Keepass sur les smartphones BlackBerry.
+Kipas est un gestionnaire de mot de passe sécurisé qui permet de lire les bases de données Keepass sur les smartphones BlackBerry.
