--- a/software/_posts/2015-06-18-oscream.md
+++ b/software/_posts/2015-06-18-oscream.md
@@ -7,3 +7,16 @@ tags: mobile
 ![OSCream](/assets/oscream.png)
 
 OSCream est une application musicale reproduisant le fonctionnement des contrôleurs Monome Grid et Arc.
+
+## OSCream Server
+OSCream Server is used to forward OSC Message between TCP protocol and UDP protocol.
+
+On the PlayBook, OSCream is developped in Adobe AIR environment, for security reasons UDP communication is disabled in AIR on mobile devices, so OSCream send its OSC Messages over TCP. But most monome applications are designed to exchange OSC messages over UDP, so a tool is needed to allow application to communicate with the PlayBook, OSCreamServer does just that.
+
+OSCream Server is programmed in Java, so it will run on any machine where a Java Runtime Environment is available, you will need Java version 1.6. OSCreamServer is distributed as a single JAR file, to run OSCreamServer, simply double-click on the JAR file icon.
+
+## Downloads
+latest version is 1.1, download <a title="OSCreamServer-1.1.jar" href="https://github.com/downloads/sdretu/OSCream-Server/OSCreamServer-1.1.jar">OSCreamServer-1.1.jar</a> now from our GitHub repository.
+version 1.0, download <a title="OSCreamServer-1.0.jar" href="https://github.com/downloads/sdretu/OSCream-Server/OSCreamServer-1.0.jar">OSCreamServer-1.0.jar</a> now from our GitHub repository.
+
+OSCream Server source code is available on <a title="OSCream Server on GitHub" href="https://github.com/sdretu/OSCream-Server">GitHub</a>.
