fixed md syntax in old posts, added related posts links to OSCream page

--- a/software/_posts/2015-06-18-oscream.md
+++ b/software/_posts/2015-06-18-oscream.md
@@ -20,3 +20,9 @@ latest version is 1.1, download <a title="OSCreamServer-1.1.jar" href="https://g
 version 1.0, download <a title="OSCreamServer-1.0.jar" href="https://github.com/downloads/sdretu/OSCream-Server/OSCreamServer-1.0.jar">OSCreamServer-1.0.jar</a> now from our GitHub repository.
 
 OSCream Server source code is available on <a title="OSCream Server on GitHub" href="https://github.com/sdretu/OSCream-Server">GitHub</a>.
+
+## Related blog articles
+
+{% for post in site.tags.oscream %}
+* [{{ post.title | escape }}]({{post.url|relative_url}})
+{% endfor %}
