added old blog posts about kipas

--- a/software/_posts/2014-03-18-kipas.md
+++ b/software/_posts/2014-03-18-kipas.md
@@ -7,3 +7,9 @@ tags: mobile
 ![Kipas](/assets/kipas.png)
 
 Kipas est un gestionnaire de mot de passe sécurisé qui permet de lire les bases de données Keepass sur les smartphones BlackBerry.
+
+## Related blog articles
+
+{% for post in site.tags.kipas %}
+* [{{ post.title | escape }}]({{post.url|relative_url}})
+{% endfor %}
