added two archive posts about OSCream on Android, added video demo of oscream, and link to play store

--- a/software/_posts/2015-06-18-oscream.md
+++ b/software/_posts/2015-06-18-oscream.md
@@ -8,6 +8,10 @@ tags: mobile
 
 OSCream est une application musicale reproduisant le fonctionnement des contrôleurs Monome Grid et Arc.
 
+<video width="400" controls autoplay>
+    <source src="/assets/oscream-edm.mov" type="video/mp4">
+</video>
+
 ## OSCream Server
 OSCream Server is used to forward OSC Message between TCP protocol and UDP protocol.
 
@@ -16,6 +20,8 @@ On the PlayBook, OSCream is developped in Adobe AIR environment, for security re
 OSCream Server is programmed in Java, so it will run on any machine where a Java Runtime Environment is available, you will need Java version 1.6. OSCreamServer is distributed as a single JAR file, to run OSCreamServer, simply double-click on the JAR file icon.
 
 ## Downloads
+OSCream is still available on Android, though it is not supported anymore. [Get it on Google Play](https://market.android.com/details?id=air.org.smugrik.oscream)
+
 latest version is 1.1, download <a title="OSCreamServer-1.1.jar" href="https://github.com/downloads/sdretu/OSCream-Server/OSCreamServer-1.1.jar">OSCreamServer-1.1.jar</a> now from our GitHub repository.
 version 1.0, download <a title="OSCreamServer-1.0.jar" href="https://github.com/downloads/sdretu/OSCream-Server/OSCreamServer-1.0.jar">OSCreamServer-1.0.jar</a> now from our GitHub repository.
 
