fixed a few draft typos

--- a/_drafts/2012-02-12-kipas-1-1-0.md
+++ b/_drafts/2012-02-12-kipas-1-1-0.md
@@ -9,6 +9,6 @@ First of all, the cryptographic functions have been entirely recoded, all of the
 This release will also be the last one to support PlayBook OS1, with the imminent release of PlayBook OS2, I will now be focusing on redesigning the UI for a better look and feel, and added functionality (hint: search is next on the list), what I have seen of the new upcoming messaging app UI at BBDevCon convinced me it could be way better, and I plan to do it with BB10 phones forward compatibility in mind.
 
 Finally, it brings in a few fixes and improvements:
-– It is now possible to open the DataBase directly by pressing the keyboard Return key after filling the password.
-– The Notes field was displaying extra line breaks, this has been fixed.
-– The bug where two entries would display instead of just one when switching between apps has been fixed.
+* It is now possible to open the DataBase directly by pressing the keyboard Return key after filling the password.
+* The Notes field was displaying extra line breaks, this has been fixed.
+* The bug where two entries would display instead of just one when switching between apps has been fixed.
