added modular grids links to eurorack modules

--- a/synth/_drafts/2021-11-12-output.md
+++ b/synth/_drafts/2021-11-12-output.md
@@ -20,4 +20,4 @@ This module is based on a circuit by YuSynth: [Output Mixer & CV Panner](http://
 
 The original YuSynth module: [Output Mixer & CV Panner](http://yusynth.net/Modular/EN/MIXOUT/index.html)
 
-The module on [ModularGrid](http://www.modulargrid.net/e/other-unknown-output)
+The module on [ModularGrid](https://www.modulargrid.net/e/other-unknown-output)
