Fixed assets structure and images

--- a/cases/_drafts/2021-02-08-12U-suitcase.md
+++ b/cases/_drafts/2021-02-08-12U-suitcase.md
@@ -4,6 +4,6 @@ title:  "12U eurorack foldable suitcase"
 date:   2021-02-08 15:43:18 +0100
 tags: case eurorack
 ---
-![12U suitcase](/assets/12usuitcase.png)
+![12U suitcase](/assets/cases/12usuitcase-full.png)
 
 A simple wooden case feature 4 x 84hp of module space.
