--- a/software/_drafts/2016-06-18-yakolo.md
+++ b/software/_drafts/2016-06-18-yakolo.md
@@ -4,6 +4,6 @@ title:  "Yakolo"
 date:   2016-06-18 10:58:18 +0100
 tags: mobile
 ---
-![Yakolo](/assets/yakolo.png)
+![Yakolo](/assets/software/yakolo.png)
 
 Yakolo est une app de contrôle à distance pour une veilleuse intelligente permettant aux jeunes enfants d'acquérir la notion du temps et de bonnes habitudes de sommeil.
