--- a/software/_posts/2014-03-18-kipas.md
+++ b/software/_posts/2014-03-18-kipas.md
@@ -4,7 +4,7 @@ title:  "Kipas"
 date:   2014-03-18 10:58:18 +0100
 tags: mobile
 ---
-![Kipas](/assets/kipas.png)
+![Kipas](/assets/software/kipas.png)
 
 Kipas est un gestionnaire de mot de passe sécurisé qui permet de lire les bases de données Keepass sur les smartphones BlackBerry.
 
