--- a/software/_posts/2017-06-18-oscream.md
+++ b/software/_posts/2017-06-18-oscream.md
@@ -4,12 +4,12 @@ title:  "OSCream"
 date:   2017-06-18 10:58:18 +0100
 tags: mobile
 ---
-![OSCream](/assets/oscream.png)
+![OSCream](/assets/software/oscream.png)
 
 OSCream est une application musicale reproduisant le fonctionnement des contrôleurs Monome Grid et Arc.
 
 <video width="400" controls autoplay>
-    <source src="/assets/oscream-edm.mov" type="video/mp4">
+    <source src="/assets/software/oscream-edm.mov" type="video/mp4">
 </video>
 
 ## OSCream Server
