changed synth page layout to tiles

--- a/synth/_drafts/2021-11-12-output.md
+++ b/synth/_drafts/2021-11-12-output.md
@@ -3,6 +3,7 @@ layout: page
 title:  "Output"
 date:   2021-11-12 15:43:18 +0100
 tags: eurorack utility
+bg: "/assets/synth/3attmix-assembled-pcbs.png"
 ---
 ![The Output module naked]()
 
