feat: updated drafts, added freelance draft section, updated layouts

--- a/cases/_drafts/2021-02-08-12U-suitcase.md
+++ b/cases/_drafts/2021-02-08-12U-suitcase.md
@@ -2,8 +2,14 @@
 layout: page
 title:  "12U eurorack foldable suitcase"
 date:   2021-02-08 15:43:18 +0100
-tags: case eurorack
+tags: eurorack
 ---
 ![12U suitcase](/assets/cases/12usuitcase-full.png)
 
 A simple wooden case feature 4 x 84hp of module space.
+
+## Related blog articles
+
+{% for post in site.tags.case %}
+* [{{ post.title | escape }}]({{post.url|relative_url}})
+{% endfor %}
